--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </p>
             </div>
           </li>
-          <li class="media mt-4">
+          <li class="media">
             <img src="img/will-it-stream.jpg" class="mr-3" alt="Will It Stream" id="thumbnail">
             <div class="media-body">
               <h5 class="mt-0 mb-1">willitstream.com</h5>
@@ -79,7 +79,7 @@
               </p>
             </div>
           </li>
-          <li class="media mt-4">
+          <li class="media">
             <img src="img/daily-planner.jpg" class="mr-3" alt="Daily Planner UCA6" id="thumbnail">
             <div class="media-body">
               <h5 class="mt-0 mb-1">Daily Planner UCA6</h5>
@@ -93,7 +93,7 @@
               </p>
             </div>
           </li>
-          <li class="media mt-4">
+          <li class="media">
             <img src="img/javascript-quiz.jpg" class="mr-3" alt="JavaScript Quiz" id="thumbnail">
             <div class="media-body">
               <h5 class="mt-0 mb-1">JavaScript Quiz</h5>
@@ -108,7 +108,7 @@
               </p>
             </div>
           </li>
-          <li class="media mt-4">
+          <li class="media">
             <img src="img/password-generator.jpg" class="mr-3" alt="Password Generator" id="thumbnail">
             <div class="media-body">
               <h5 class="mt-0 mb-1">Password Generator</h5>
