bigger margins on portfolio items. made links less texty to fit in phone screens.

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 Coding Bootcamp project number one.</p>
               <p><a href="https://willitstream.com" id="portfolio-link" target="_blank">https://willitstream.com</a>
               </p>
-              <p><a href="https://github.com/marlonmatthew/will-it-stream" id="portfolio-link"
-                  target="_blank">https://github.com/marlonmatthew/will-it-stream</a>
+              <p><a href="https://github.com/marlonmatthew/will-it-stream" id="portfolio-link" target="_blank">GitHub
+                  Repo</a>
               </p>
             </div>
           </li>
@@ -86,10 +86,10 @@
               <p id="description">A 24 hour daily planner with an Amazon theme. UCR Coding Bootcamp assignment number
                 four.</p>
               <p><a href="https://marlonmatthew.github.io/daily-planner-uca6/" id="portfolio-link"
-                  target="_blank">https://marlonmatthew.github.io/daily-planner-uca6/</a>
+                  target="_blank">Deployed Site</a>
               </p>
               <p><a href="https://github.com/marlonmatthew/daily-planner-uca6" id="portfolio-link"
-                  target="_blank">https://github.com/marlonmatthew/daily-planner-uca6</a>
+                  target="_blank">GitHub Repo</a>
               </p>
             </div>
           </li>
@@ -100,11 +100,11 @@
               <p id="description">A 5 question multiple choice quiz with high score functionality. UCR Coding Bootcamp
                 assignment number
                 three.</p>
-              <p><a href="https://marlonmatthew.github.io/javascript-quiz/" id="portfolio-link"
-                  target="_blank">https://marlonmatthew.github.io/javascript-quiz/</a>
+              <p><a href="https://marlonmatthew.github.io/javascript-quiz/" id="portfolio-link" target="_blank">Deployed
+                  Site</a>
               </p>
-              <p><a href="https://github.com/marlonmatthew/javascript-quiz" id="portfolio-link"
-                  target="_blank">https://github.com/marlonmatthew/javascript-quiz</a>
+              <p><a href="https://github.com/marlonmatthew/javascript-quiz" id="portfolio-link" target="_blank">GitHub
+                  Repo</a>
               </p>
             </div>
           </li>
@@ -115,10 +115,10 @@
               <p id="description">Generate a password based off certain user criteria. UCR Coding Bootcamp assignment
                 number two.</p>
               <p><a href="https://marlonmatthew.github.io/password-generator/" id="portfolio-link"
-                  target="_blank">https://marlonmatthew.github.io/password-generator/</a>
+                  target="_blank">Deployed Site</a>
               </p>
               <p><a href="https://github.com/marlonmatthew/password-generator" id="portfolio-link"
-                  target="_blank">https://github.com/marlonmatthew/password-generator</a>
+                  target="_blank">GitHub Repo</a>
               </p>
             </div>
           </li>
