I added a link to my updated resume. LinkedIn profile is now mostly developed.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <a href="tel: 619-504-4166"><button type="button" class="btn btn-light bi bi-phone-fill"></button></a>
             <a href="https://www.linkedin.com/in/marlonmatthew/" target="_blank"><button type="button"
                 class="btn btn-light bi bi-linkedin"></button></a>
-            <a href="resume" target="_blank"><button type="button"
-                class="btn btn-light bi bi-file-person-fill"></button></a>
+            <a href="https://drive.google.com/file/d/1ra0CVGRRbU2U6afapvVvmKnFT1fkHeJY/view?usp=sharing"
+              target="_blank"><button type="button" class="btn btn-light bi bi-file-person-fill"></button></a>
           </div>
         </div>
       </div>
@@ -53,15 +53,14 @@
       <div class="col-md-auto mt-2 mb-4">
         <h2 class="header">My Portfolio</h2>
         <ul class="list-unstyled">
-          <li class="media">
+          <li class="media mb-4">
             <img src="img/ricemusic.jpg" class="mr-3" alt="ricemusic.net" id="thumbnail">
             <div class="media-body">
               <h5 class="mt-0 mb-1">ricemusic.net</h5>
               <p id="description">San Diego bassist Rice Enright has been a staple in the music community for many
-                years. Check out everything he has to offer musically here. He was the first actual client I ever took.
-                This site was created in WordPress and Elementor, which allowed him the chance to make future updates
-                and edits on his
-                own.</p>
+                years. This site was created in WordPress and Elementor, which allowed him the chance to make future
+                updates
+                and edits on his own.</p>
               <p><a href="https://www.ricemusic.net" id="portfolio-link" target="_blank">https://www.ricemusic.net</a>
               </p>
             </div>
@@ -131,14 +130,14 @@
     <div class="row">
       <div class="col-sm mb-3">
         <h2>About Me</h2>
-        <p>In 1996, I took web design for my high school zero period class where I began
+        <p>My first exposure to web design was my high school zero period class where I began
           learning HTML and basic graphic design. Creating websites for personal endeavors was something I continued to
           enjoy doing throughout the years.</p>
         <p>In 2016, I completed an internship with Linguistic Horizons where I learned
-          how to utilize Wordpress and the many different plugins available. In 2017, I took my first
-          client in the local music community. I built a website with Wordpress and Elementor that helped him to attract
-          more students.</p>
-        <p>In 2021, I completed a certification for a web development bootcamp through the University of
+          how to utilize Wordpress and the many different plugins available. I took my first
+          client in the local music community in 2017 and built a website with Wordpress and Elementor that helped him
+          to attract more students and gain higher google search rankings.</p>
+        <p>I am completing a certification for a web development bootcamp in 2021 through the University of
           California, Riverside. I feel accomplished to have greatly expanded my knowledge and skills as a full stack
           web developer. My portfolio showcases many of the assignments and projects that I submitted throughout the
           bootcamp. Outside of the bootcamp, my portfolio also showcases freelance work I completed.</p>
