Made some minor changes: jumbotron color, about me.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
@@ -58,9 +58,8 @@
             <div class="media-body">
               <h5 class="mt-0 mb-1">ricemusic.net</h5>
               <p id="description">San Diego bassist Rice Enright has been a staple in the music community for many
-                years. This site was created in WordPress and Elementor, which allowed him the chance to make future
-                updates
-                and edits on his own.</p>
+                years. It was important to create this site with WordPress and Elementor, which gave him the capability
+                to make future updates and edits on his own.</p>
               <p><a href="https://www.ricemusic.net" id="portfolio-link" target="_blank">https://www.ricemusic.net</a>
               </p>
             </div>
@@ -134,17 +133,13 @@
           learning HTML and basic graphic design. Creating websites for personal endeavors was something I continued to
           enjoy doing throughout the years.</p>
         <p>In 2016, I completed an internship with Linguistic Horizons where I learned
-          how to utilize Wordpress and the many different plugins available. I took my first
-          client in the local music community in 2017 and built a website with Wordpress and Elementor that helped him
-          to attract more students and gain higher google search rankings.</p>
-        <p>I am completing a certification for a web development bootcamp in 2021 through the University of
-          California, Riverside. I feel accomplished to have greatly expanded my knowledge and skills as a full stack
-          web developer. My portfolio showcases many of the assignments and projects that I submitted throughout the
+          how to utilize Wordpress and the many different plugins available. Shortly after, I took my first
+          client in the local music community. Utilizing both Wordpress and Elementor, I built a website that helped him
+          to increase his student base, receive new gig offers, and gain higher google search rankings.</p>
+        <p>I am currently completing a certification for a web development bootcamp in 2021 through the University of
+          California, Riverside. My knowledge and skills as a full stack web developer have greatly expanded. My
+          portfolio showcases many of the assignments and projects that I submitted throughout the
           bootcamp. Outside of the bootcamp, my portfolio also showcases freelance work I completed.</p>
-        <p>My other interests include beautiful nature hikes, hanging out at the beach, specialty blended cold brew
-          beverages, amazing movies, delicious cuisine of all kinds, and most of all,
-          music that evokes a multitude of different emotions and sensations.
-        </p>
       </div>
       <div class="col-md-auto mb-4">
         <img class="mar_image" src="img/marlon-matthew-02.jpg" alt="Web developer Marlon Matthew ">
