Tweaked about me

--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
           learning HTML and basic graphic design. Creating websites for personal endeavors was something I continued to
           enjoy doing throughout the years.</p>
         <p>In 2016, I completed an internship with Linguistic Horizons where I learned
-          how to utilize Wordpress and the many different plugins available. Shortly after, I took my first
+          how to use Wordpress and the many different plugins available. Shortly after, I took my first
           client in the local music community. Utilizing both Wordpress and Elementor, I built a website that helped him
           to increase his student base, receive new gig offers, and gain higher google search rankings.</p>
         <p>I am currently completing a certification for a web development bootcamp in 2021 through the University of
-          California, Riverside. My knowledge and skills as a full stack web developer have greatly expanded. My
+          California, Riverside. My knowledge and skills as a full stack web developer are greatly expanding. I am
+          excited to put my newly acquired skillset to use in the professional world. My
           portfolio showcases many of the assignments and projects that I submitted throughout the
           bootcamp. Outside of the bootcamp, my portfolio also showcases freelance work I completed.</p>
       </div>
