changed alt tags

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-auto mt-2 mb-4">
-          <img class="mar_image" src="img/marlon-matthew.jpg" alt="Web developer Marlon Matthew eating a fish burrito">
+          <img class="mar_image" src="img/marlon-matthew.jpg" alt="Web developer Marlon Matthew">
         </div>
         <div class="col-md-auto" id="jumbo_text">
           <h1 class="display-3 jumbotron-header">Marlon Matthew</h1>
@@ -143,7 +143,7 @@
           bootcamp. Outside of the bootcamp, my portfolio also showcases freelance work I completed.</p>
       </div>
       <div class="col-md-auto mb-4">
-        <img class="mar_image" src="img/marlon-matthew-02.jpg" alt="Web developer Marlon Matthew ">
+        <img class="mar_image" src="img/marlon-matthew-02.jpg" alt="Web developer Marlon Matthew">
       </div>
     </div>
   </section>
