weather dashboard added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
       <div class="col-md-auto mt-2 mb-4">
         <h2 class="header">My Portfolio</h2>
         <ul class="list-unstyled">
+          <li class="media">
+            <img src="img/weather-dashboard.jpg" class="mr-3" alt="Weather Dashboard" id="thumbnail">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">Weather Dashboard</h5>
+              <p id="description">Search any city in the world to retrieve current weather conditions as well as a 5-day
+                forecast. UCR Coding Bootcamp assignment #5.</p>
+              <p><a href="https://marlonmatthew.github.io/weather-dashboard/" id="portfolio-link"
+                  target="_blank">Deployed Site</a>
+              </p>
+              <p><a href="https://github.com/marlonmatthew/weather-dashboard" id="portfolio-link" target="_blank">GitHub
+                  Repo</a>
+              </p>
+            </div>
+          </li>
           <li class="media mb-4">
             <img src="img/ricemusic.jpg" class="mr-3" alt="ricemusic.net" id="thumbnail">
             <div class="media-body">
@@ -69,7 +83,7 @@
             <div class="media-body">
               <h5 class="mt-0 mb-1">willitstream.com</h5>
               <p id="description">Search for your favorite movie or show titles and see where they are streaming. UCR
-                Coding Bootcamp project number one.</p>
+                Coding Bootcamp project #1.</p>
               <p><a href="https://willitstream.com" id="portfolio-link" target="_blank">https://willitstream.com</a>
               </p>
               <p><a href="https://github.com/marlonmatthew/will-it-stream" id="portfolio-link" target="_blank">GitHub
@@ -81,8 +95,7 @@
             <img src="img/daily-planner.jpg" class="mr-3" alt="Daily Planner UCA6" id="thumbnail">
             <div class="media-body">
               <h5 class="mt-0 mb-1">Daily Planner UCA6</h5>
-              <p id="description">A 24 hour daily planner with an Amazon theme. UCR Coding Bootcamp assignment number
-                four.</p>
+              <p id="description">A 24 hour daily planner with an Amazon theme. UCR Coding Bootcamp assignment #4.</p>
               <p><a href="https://marlonmatthew.github.io/daily-planner-uca6/" id="portfolio-link"
                   target="_blank">Deployed Site</a>
               </p>
@@ -96,8 +109,7 @@
             <div class="media-body">
               <h5 class="mt-0 mb-1">JavaScript Quiz</h5>
               <p id="description">A 5 question multiple choice quiz with high score functionality. UCR Coding Bootcamp
-                assignment number
-                three.</p>
+                assignment #3.</p>
               <p><a href="https://marlonmatthew.github.io/javascript-quiz/" id="portfolio-link" target="_blank">Deployed
                   Site</a>
               </p>
@@ -111,7 +123,7 @@
             <div class="media-body">
               <h5 class="mt-0 mb-1">Password Generator</h5>
               <p id="description">Generate a password based off certain user criteria. UCR Coding Bootcamp assignment
-                number two.</p>
+                #2.</p>
               <p><a href="https://marlonmatthew.github.io/password-generator/" id="portfolio-link"
                   target="_blank">Deployed Site</a>
               </p>
