Added burger app to portfolio.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
             </div>
           </li>
           <li class="media">
+            <img src="img/burger-devourment-app.jpg" class="mr-3" alt="Burger Devourment App" id="thumbnail">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">Burger Devourment App</h5>
+              <p id="description">Add burgers to a database and change their devoured status.</p>
+              <p><a href="https://burger-devourment.herokuapp.com" id="portfolio-link"
+                  target="_blank">https://burger-devourment.herokuapp.com</a>
+              </p>
+              <p><a href="https://github.com/marlonmatthew/burger" id="portfolio-link" target="_blank">GitHub
+                  Repo</a>
+              </p>
+            </div>
+          </li>
+          <li class="media">
             <img src="img/will-it-stream.jpg" class="mr-3" alt="Will It Stream" id="thumbnail">
             <div class="media-body">
               <h5 class="mt-0 mb-1">willitstream.com</h5>
@@ -162,7 +175,7 @@
 
   <footer class="footer mt-auto py-3 text-center">
     <div class="container">
-      <span class="text-muted">Copyright &copy; 2020 Marlon Matthew</span>
+      <span class="text-muted">Copyright &copy; 2021 Marlon Matthew</span>
     </div>
   </footer>
 
