Login info added for bubbles

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
               <h5 class="mt-0 mb-1" id="project">
                 Bubbles EMS
               </h5>
-              <p id="description">Dashboard for managing employee accounts, time, pay, and
+              <p id="description">To login, use "admin" for the login and "bubbles923681" for
+                the password. Dashboard for managing employee accounts, time, pay, and
                 schedules. Core responsibilities: Front-end design and CSS
                 styling, database schema, application concept. Technologies
                 used: HTML, CSS, Bootstrap, JavaScript, MongoDB, React. UCR
