--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </p>
         <p>
           <b>Skills:</b> GitHub, MySQL, MongoDB, ReactJS, Node.js, Express,
-          Handlebars.js, JQuery, Bootstrap
+          Handlebars.js, JQuery, Bootstrap, Wordpress, Elementor, Yoast
         </p>
       </div>
     </div>
